--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   carousel_slider: ^1.1.0
-  image_picker:
+  image_picker: ^0.4.5
+  image_cropper: ^0.0.4
 
 dev_dependencies:
   flutter_test:
