--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   carousel_slider: ^1.1.0
   image_picker: ^0.4.5
   image_cropper: ^0.0.4
+  sqflite: ^1.1.0
+  path_provider: ^0.5.0+1
 
 dev_dependencies:
   flutter_test:
