--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   image_cropper: ^0.0.4
   sqflite: ^1.1.0
   path_provider: ^0.5.0+1
+  flutter_slidable: ^0.4.9
 
 dev_dependencies:
   flutter_test:
