UI improvements and db fix

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,7 @@ flutter:
     - assets/images/level_medium.png
     - assets/images/level_hard.png
     - assets/images/level_none.png
+    - assets/images/turn.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
