--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -61,6 +63,8 @@ flutter:
     - assets/images/level_hard.png
     - assets/images/level_none.png
     - assets/images/turn.png
+    - assets/locale/localization_en.json
+    - assets/locale/localization_es.json
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
